# note_assistant

./: .gitignore  README.md  main.py  note_assistant.py  pyproject.toml  test_note_assistant.py
src/note_assistant/: __main__.py  cli.py  note_assistant.py  output.py
tests/: test_note_assistant.py
