[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "note_assistant"
version = "0.0.1"
requires-python = ">=3.12.3"
authors = [
  { name="James Kairos", email="jamesdkairos@gmail.com" },
]
description = "A cli tool to allow quick note generation for later reference"
readme = "README.md"
keywords = ["note", "assistant", "storage", "reminders"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
    "rich>=14.3.3",
]

[tool.pytest.ini_options]
minversion = "8.3.3"
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.3.3"]

[project.urls]
Homepage = "https://github.com/kairos4213/note_assistant"
Issues = "https://github.com/kairos4213/note_assistant/issues"

[project.scripts]
na = "note_assistant.cli:app"
